--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,5 @@
 version: "3"
-
 services:
-
   database:
     image: "postgres:11"
     container_name: postgres_docker
@@ -12,7 +10,7 @@ services:
     networks:
       - omero
     volumes:
-      - "/home/sict_dev/Desktop/Omero_3DSlicer_development_environment/volumes/postgresql_volume:/var/lib/postgresql/data" #Replace the first directory with its volume. 
+      - "c:/postgresql_volume:/var/lib/postgresql/data" #Replace the first directory with its volume. 
       #- "database:/var/lib/postgresql/data" #
 
   omeroserver:
@@ -32,7 +30,7 @@ services:
       - "4063:4063"
       - "4064:4064"
     volumes:
-      - "/home/sict_dev/Desktop/Omero_3DSlicer_development_environment/volumes/omero_server_volume:/OMERO" #Replace the first directory with its volume.
+      - "c:/omero_server_volume:/OMERO" #Replace the first directory with its volume.
       #- "omero:/OMERO"
 
   omeroweb:
@@ -47,9 +45,9 @@ services:
     ports:
       - "4080:4080"
     volumes:
-      - "/home/sict_dev/Desktop/Omero_3DSlicer_development_environment/volumes/omero_web_extension_volume:/opt/omero/web/venv3/lib/python3.6/site-packages/minimal_webapp" #Replace the first directory with its volume.
-      - "/home/sict_dev/Desktop/Omero_3DSlicer_development_environment/volumes/omero_web_conf_volume/config.omero:/opt/omero/web/config/config.omero" #Replace the first directory with its volume.
-      - "/home/sict_dev/Desktop/Omero_3DSlicer_development_environment/volumes/slicer_volume:/home/Documents" #Replace the first directory with its volume.This volume is the same as the slicer volume
+      - "c:/omero_web_extension_volume:/opt/omero/web/venv3/lib/python3.6/site-packages/minimal_webapp" #Replace the first directory with its volume.
+      - "c:/omero_web_conf_volume/config.omero:/opt/omero/web/config/config.omero" #Replace the first directory with its volume.
+      - "c:/slicer_volume:/home/Documents" #Replace the first directory with its volume.This volume is the same as the slicer volume
 
   slicer:
     image: "slicer" 
@@ -63,7 +61,7 @@ services:
       - "6901:6901"
       - "8085:8085"
     volumes:
-      - "/home/sict_dev/Desktop/Omero_3DSlicer_development_environment/volumes/slicer_volume:/home/kasm-user/Documents" #Replace the first directory with its volume.
+      - "c:/slicer_volume:/home/kasm-user/Documents" #Replace the first directory with its volume.
     shm_size: 512m
 #To activate the GPU
 #    deploy:
@@ -77,7 +75,6 @@ services:
 networks:
   omero:
     name: network
-
 # volumes:
 #   database:
 #   omero:
